<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/details"
        android:layout_width="409dp"
        android:layout_height="601dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/mapTitle"
            android:layout_width="291dp"
            android:layout_height="54dp"
            android:text="Title Goes Here"
            android:textSize="34sp"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="20dp" />
        <TextView
            android:id="@+id/latlong"
            android:layout_width="291dp"
            android:layout_height="54dp"
            android:text="Title Goes Here"
            android:textSize="22sp"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="20dp" />
        <WebView
            android:id="@+id/mapWebView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>