<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/locationNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Location Name" />

        <Button
            android:id="@+id/showDetailsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Show Weather" />

        <Button
            android:id="@+id/showMapButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Map"
            android:padding="8dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

    <!--<?xml version="1.0" encoding="utf-8"?>-->
    <!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="match_parent">-->

    <!--    <LinearLayout-->
    <!--        xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="horizontal">-->

    <!--        <TextView-->
    <!--            android:id="@+id/locationNameTextView"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_weight="1"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:text="Location Name" />-->

    <!--        <Button-->
    <!--            android:id="@+id/showDetailsButton"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:text="Show Weather" />-->

    <!--        <Button-->
    <!--            android:id="@+id/showMapButton"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:text="Map"-->
    <!--            android:padding="8dp"/>-->
    <!--    </LinearLayout>-->


    <!--</androidx.constraintlayout.widget.ConstraintLayout>-->
