<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="CS427 Project App" />

        <Button
            android:id="@+id/buttonProfileActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="View Profile" />

        <Button
            android:id="@+id/addLocationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ADD or DELETE LOCATION"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="List of Locations" />

        <ListView
            android:id="@+id/locationListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/addLocationButton"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>